adding code with config and adding routes to report job
